perf/istio/external-traffic/templates/sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  namespace: allow-external-traffic-a
  name: allow-external-traffic-a-sidecar
spec:
  egress:
    - hosts:
      - ~/*
